[package]
name = "cw-scrt-oracle-price"
version = "0.1.0"
authors = ["Jabba <r0g3r@tuta.io>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
cosmwasm-std = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
cosmwasm-storage = { git = "https://github.com/enigmampc/SecretNetwork", tag = "v1.0.0" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
secret-toolkit = { git = "https://github.com/enigmampc/secret-toolkit" }
#snafu = { version = "0.6.3" }
#serde-json-wasm = "0.2.1"
#chrono = { version = "0.4.19" }
#subtle = { version = "2.2.3", default-features = false }
#sha2 = { version = "0.9.1", default-features = false }
#base64 = "0.12.3"
#string_generator = "0.1.0"